# codingame

./: .gitignore  Cargo.toml  README.md  ai.py  clash.py  clean_files.ps1  clean_files.sh  create_clash_files.ps1  create_slash_files.sh  genetic_algorithm.py  get_random_language.ps1  get_random_language.sh  gold.txt  init_directories.ps1  init_directories.sh  languages.ini  launch_cg_local_app.ps1  launch_cg_local_app.sh  main.py  migration.py  random_language.ps1  reset_repository.ps1  reset_repository.sh  setup.cfg  test.py
app/: ai.py  app.py  genetic_algorithm.py  main.py  model.py
bot-programming/: green-circle.py  mad-pod-racing.py  platinum-rift-episode-1.py2  poker-chip-race.cpp  spring-challenge-2023-ants.py
codegolf/easy/: ascii-art-codesize.py  power-of-thor.py  unary.py
docs/: WOOD.md  WOOD_1.md  WOOD_2.md
lab/code-vs-zombies/: README.md
lab/code-vs-zombies/app/: game.py
lab/green-circle/: Makefile  README.md
lab/spring-challenge-2023-ants/: README.md
lab/summer-challenge-2023/: 01.py  03.py
optimization/: code-vs-zombies.py
puzzles/easy/: defibrillators.py  power-of-thor-episode-1.py
puzzles/hard/: gerrymandering.py
puzzles/medium/: byte-pair-encoding.py  death-first-search-episode-1.py  shadows-of-the-knight-episode-1.py
src/: main.rs
src/bot_programming/: spring_challenge_2021.py
src/lab/code-vs-zombies/: pyproject.toml
src/lab/code-vs-zombies/app/: ai.py
src/lab/green-circle/: .gitignore  pyproject.toml
src/optimization/: code_of_the_rings.rs  mars_lander.py  mod.rs
src/puzzles/: mod.rs
tests/: test_ai.py
(+37 files in other folders)
