[tool.poetry]
name = "cg-greencircle"
version = "0.1.0"
description = "CodinGame: Green Circle"
authors = ["slgeay <avomailbox-github@yahoo.fr>"]
packages = [
    {"include" = "**/*.py", from = "app"},
]

[tool.poetry.dependencies]
python = "3.9.12"
numpy = "1.20.2"
pandas = "1.2.4"
scipy = "1.6.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--benchmark-disable -p no:nose"

[tool.poetry.scripts]
app = "app.main:main"
